[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pyright]
reportUnnecessaryTypeIgnoreComment = "warning"
enableExperimentalFeatures = true
pythonVersion = "3.8"
typeCheckingMode = "basic"
ignore = [
    "github/utility/_mirror"
]

[tool.black]
line-length = 200
exclude = '''
(
    ^/github/utility/_mirror/.*
)
'''
